# pyscrobbler

./: pyproject.toml
src/lib/krautcat/lastfm/: scrobbler.py
